Fix formatting issue in the action section
fixed the style issue with the call to action portion of the site. issue
was caused by overlapping style declarations

--- a/style.css
+++ b/style.css
@@ -114,6 +114,11 @@
     gap: 75px;
 }
 
+#desc {
+    display: flex;
+    flex-direction: column;
+}
+
 /* class rules */
 
 .image {
